--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "didyoumean2": "2.0.2",
     "fs": "0.0.1-security",
     "moment": "2.24.0",
+    "path": "0.12.7",
     "pdfjs-dist": "2.0.943",
     "request": "2.88.0",
     "request-promise-native": "1.0.5",
